--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB ERR</title>
-</head>
-
-<body>
-    <div style="text-align: center;">
-        <img src="https://s21.ax1x.com/2024/08/29/pAARpcD.jpg" alt="Image Description">
-        <h1>网站被吃了，站长正在抢修中QwQ</h1>
-    </div>
-</body>
-
-</html>
+<h1>test</h1>
